Fix header width on iphone image upload page.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -679,10 +679,10 @@ form.simple_form {
 		margin-top: 2em;
 		display: block;
 		border: none;
-		width: 100%;
+		width: 90%;
 	}
 	input[type=file] {
-		opacity: 0;
+		// opacity: 0;
 	}
 }
 
